# planet_cf

./: .dev.vars.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LOGGING_AUDIT_REPORT.md  Makefile  README.md  TODO.md  cf-requirements.txt  package-lock.json  package.json  pyproject.toml  vulture_whitelist.py  wrangler.jsonc  wrangler.planet-mozilla.jsonc  wrangler.planet-python.jsonc  wrangler.production.jsonc
.github/workflows/: check.yml  e2e.yml
assets/static/: admin.js  style.css
audit-reports/: bug-patterns.md  code-quality.md  concurrency.md  design-philosophy.md  doc-brittleness.md  doc-code-sync.md  feature-completeness.md  language-best-practices.md  performance.md  resource-management.md  security.md  test-quality.md  ui-design.md
compatibility-tests/: README.md
compatibility-tests/test-bleach/: main.py  test.sh  wrangler.jsonc
compatibility-tests/test-feedparser/: main.py  test.sh  wrangler.jsonc
config/: admins.json  instance.example.yaml
config/instances/: planet-mozilla.yaml  planet-python.yaml
docs/: ARCHITECTURE.md  CLI_PROPOSAL.md  COMPARISON.md  CONVERSION_GUIDE.md  DESIGN_GUIDE.md  INSTANCE_MODES.md  LAYOUT.md  LESSONS_LEARNED.md  LIGHTHOUSE.md  LITE_MODE.md  MULTI_INSTANCE.md  OBSERVABILITY.md  PERFORMANCE.md  PLANET_PYTHON_ISSUES_ANALYSIS.md  SPEC.md  TESTING.md  feed-debugging.md  status.md
docs/specs/: fts5-search.md
docs/tmp/: SKILL.md
docs/tmp/references/python-workers/: README.md  api.md  configuration.md  gotchas.md  patterns.md
examples/default/: README.md  config.yaml  wrangler.jsonc
examples/default/assets/: feeds.opml
examples/default/assets/static/: style.css
examples/default/templates/: index.html  search.html  titles.html
examples/default/templates/admin/: dashboard.html  error.html  health.html
examples/planet-cloudflare/: README.md  config.yaml  wrangler.jsonc
examples/planet-cloudflare/assets/static/: admin.js  style.css
examples/planet-mozilla/: README.md  config.yaml  wrangler.jsonc
examples/planet-mozilla/assets/: feeds.opml
examples/planet-mozilla/assets/static/: style.css
examples/planet-mozilla/templates/: index.html  search.html  titles.html
examples/planet-mozilla/theme/: style.css
examples/planet-python/: README.md  config.yaml  python_modules  wrangler.jsonc
examples/planet-python/assets/: feeds.opml
examples/planet-python/assets/static/: style.css
examples/planet-python/assets/static/styles/: defaultfonts.css  netscape4.css
examples/planet-python/static/styles/: largestyles.css  styles.css
examples/planet-python/templates/: index.html  search.html  titles.html
examples/planet-python/theme/: style.css
examples/test-planet/: config.yaml  wrangler.jsonc
examples/test-planet/assets/static/: admin.js  keyboard-nav.js
migrations/: 001_initial.sql  002_seed_admins.sql  003_add_first_seen.sql  004_add_last_entry_at.sql  005_create_applied_migrations.sql  006_create_fts5_index.sql
scripts/: build_templates.py  convert_planet.py  create_instance.py  deploy_instance.sh  seed_admins.py  seed_feeds_from_opml.py  seed_test_data.py  setup_test_planet.sh  validate_deployment_ready.py  verify_deployment.py  visual_compare.py
specs/: planet-cloudflare-spec.md
src/: __init__.py  admin.py  admin_context.py  auth.py  config.py  content_processor.py  feed_generator.py  feed_processor.py  instance_config.py  main.py  models.py  oauth_handler.py  observability.py  route_dispatcher.py  search_query.py  templates.py  types.py  url_resolver.py  utils.py  wrappers.py  xml_sanitizer.py
static/: style.css
stubs/: workers.pyi
templates/: feed.atom.xml  feed.rss.xml  feed.rss10.xml  feeds.opml  foafroll.xml  index.html  keyboard-nav.js  search.html  style.css  titles.html
templates/admin/: dashboard.html  error.html  login.html
tests/: __init__.py  conftest.py
tests/benchmark/: test_search_performance.py
tests/e2e/: __init__.py  conftest.py  test_e2e_feed_to_homepage.py  test_feed_workflow.py  test_search_accuracy_real.py  test_search_real.py  test_search_verification.py  test_ui_buttons.py
tests/fixtures/: __init__.py  blog_posts.json  boristane_feed.py  factories.py  test_feeds.opml  url_resolution_posts.json
tests/fixtures/feeds/: malformed.xml  valid_atom.xml  valid_rss2.xml  xss_attack.xml
tests/integration/: __init__.py  conftest.py  test_contracts.py  test_e2e_feed_to_homepage.py  test_fetcher.py  test_http.py  test_scheduler.py  test_search.py  test_search_accuracy.py  test_ui_buttons.py
tests/js/: admin.test.js
tests/mocks/: __init__.py  d1.py  jsproxy.py
tests/unit/: __init__.py  test_admin.py  test_admin_context.py  test_admin_operations.py  test_admin_routes_extended.py  test_admin_routing.py  test_api_contracts.py  test_auth.py  test_boristane_feed.py  test_config.py  test_content_processor.py  test_data_conversion.py  test_feed_error.py  test_feed_parsing.py  test_feed_recovery.py  test_fetch_full_content.py  test_fts5_migration.py  test_fts5_trigger_properties.py  test_github_callback.py  test_import_opml.py  test_inactive_feed_display.py  test_instance_config.py  test_main_helpers.py  test_migration_schema.py  test_migration_tracking.py  test_models.py  test_no_full_content_fetch.py  test_normalize_urls.py  test_oauth_handler.py  test_observability.py  test_properties.py  test_queue_dlq_and_errors.py  test_queue_processing.py  test_remaining_mitigations.py  test_retention_policy.py  test_route_dispatcher.py  test_safe_wrappers.py  test_schema_consistency.py  test_search_query.py  test_search_query_properties.py  (+11 more)
themes/classic/: style.css
themes/dark/: style.css
themes/minimal/: style.css
themes/planet-mozilla/: style.css
themes/planet-python/: style.css
