# pyproject.toml
# Planet CF - Feed Aggregator for Cloudflare Python Workers

[project]
name = "planetcf"
version = "1.0.0"
description = "A feed aggregator built on Cloudflare's Python Workers platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Adewale Oshineye", email = "planet@planetcf.com"}
]
keywords = ["cloudflare", "workers", "rss", "atom", "feed", "aggregator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "feedparser>=6.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "bleach>=6.0.0",
    "markupsafe>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.21.0",
    "freezegun>=1.2.0",
    "hypothesis>=6.100.0",
]

dev = [
    "ruff>=0.4.0",
]

tools = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "pillow>=10.0.0",
]

# Cloudflare Python Workers development dependencies
[dependency-groups]
workers = [
    "workers-py",
    "workers-runtime-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# =============================================================================
# Astral Toolchain Configuration
# =============================================================================

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["stubs"]

[tool.ty.src]
include = ["src/"]

[tool.ty.rules]
# ty's bundled typeshed stubs don't include XMLParser(forbid_dtd=) from Python 3.12+
unknown-argument = "ignore"
# SafeEnv wraps optional bindings (AI, SEARCH_INDEX) as T | None;
# callers rely on runtime mode checks rather than None guards before access
possibly-missing-attribute = "ignore"
# js_fetch is imported from Pyodide's js module which resolves to None in tests;
# at runtime it's always callable
call-non-callable = "ignore"

[tool.ty.analysis]
# Cloudflare Workers runtime modules are only available inside Pyodide/Workers
# and cannot be resolved in the local development environment
allowed-unresolved-imports = [
    "js",
    "js.*",
    "pyodide",
    "pyodide.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async (async best practices)
    "S",      # flake8-bandit (security)
]
ignore = [
    "S104",   # Possible binding to all interfaces (intentional for Workers)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["S", "E501"]  # Security checks less relevant; long JS strings OK
"tests/*" = [
    "S101",  # Allow assert statements in tests
    "S105",  # Allow hardcoded test secrets
    "S106",  # Allow hardcoded test passwords
    "E501",  # Allow long lines in test data
    "E402",  # Allow imports after sys.path manipulation in conftest
]
"src/templates.py" = ["E501"]  # Embedded HTML templates have long lines
"src/observability.py" = [
    "S311",  # random.random() is fine for sampling (not security)
    "UP017",  # Keep timezone.utc for consistency across the codebase
]
"src/main.py" = [
    "S608",  # SQL uses bind() parameters, not string formatting
    "S314",  # XML parsing for admin OPML import (authenticated only)
    "UP040",  # Can't use PEP 695 `type` keyword - Pyodide uses Python 3.11
    "UP017",  # Keep timezone.utc for consistency across the codebase
]
"src/utils.py" = [
    "UP017",  # Keep timezone.utc for consistency across the codebase
]
"src/wrappers.py" = [
    "ANN401",  # JS/Python boundary layer - Any is intentional for JsProxy types
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "e2e: end-to-end tests requiring external services (live worker deployment)",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
